Fix datetime picker z-index

--- a/packages/portal-style/src/components/_forms.scss
+++ b/packages/portal-style/src/components/_forms.scss
@@ -424,3 +424,7 @@ select.form-control:not([multiple="multiple"]) {
 .field_more_attachments {
   display: none;
 }
+
+.react-datepicker-popper {
+  z-index: 3000;
+}
